[package]
name = "bfint"
authors = ["Chudov Sergei <chudov42@gmail.com>"]
description = "BrainFuck interpreter implemented in Rust."
license = "MIT"
version = "0.2.0"
edition = "2021"
readme = "README.md"

[dependencies]
clap = { version = "4.1.14", features = ["derive"], optional = true }

[features]
build-bfint-cli = ["clap"]

[lib]
name = "bfint"
path = "src/lib.rs"

[[bin]]
name = "bfint-cli"
path = "src/cli.rs"

required-features = ["build-bfint-cli"]

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.5"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.68.0"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc", "aarch64-apple-darwin"]
